功能完善，需要优化前端csvs显示git

--- a/游戏逻辑流程图.md
+++ b/游戏逻辑流程图.md
@@ -55,7 +55,7 @@
 ├─→ 情况3：已选择2个同色球
 │   └─→ 点击任一颜色的球（包括同色或其他颜色）：
 │       └─→ 弹出确认框："最多拿同一个颜色的2个球"
-│           └─→ 点击"确定"：清空拿取栏（变为"无"），"拿取宝石"按钮置灰
+│           └─→ 点击"确定"：清空拿取栏（变为"无"），"拿取精灵球"按钮置灰
 │
 ├─→ 情况4：已选择2个不同色球
 │   ├─→ 点击已选颜色：
@@ -67,9 +67,9 @@
 └─→ 情况5：已选择3个不同色球（拿满）
     └─→ 点击任意颜色：
         └─→ 弹出确认框："最多拿三个不同颜色的各1个球"
-            └─→ 点击"确定"：清空拿取栏（变为"无"），"拿取宝石"按钮置灰
+            └─→ 点击"确定"：清空拿取栏（变为"无"），"拿取精灵球"按钮置灰
 
-【点击"拿取宝石"按钮】
+【点击"拿取精灵球"按钮】
     │
     ├─→ 按钮状态检查（动态更新）：
     │   ├─→ 不是当前玩家回合：按钮灰色
@@ -86,7 +86,7 @@
     │           ├─→ ✅ 拿取栏数目 == remained_color（拿了所有可用颜色各1个）：按钮亮起
     │           └─→ ❌ 其他情况：按钮灰色
     │
-    └─→ 点击"拿取宝石"按钮（亮起时）→ 发送请求到后端
+    └─→ 点击"拿取精灵球"按钮（亮起时）→ 发送请求到后端
         ↓
     【球数检查】
         ↓
